Reduce home page header image height (on desktops) - reveals more of page content below to encourage scrolling down. Add padding to nav menu items to increase clickable target. Fix missing padding on price box text (where'd' it go???) Fix scrollTo target for kid face on home page.

--- a/web/app/themes/umunandi/src/admin/admin.less
+++ b/web/app/themes/umunandi/src/admin/admin.less
@@ -32,6 +32,6 @@
 	}
 }
 
-#adminmenuwrap { float: none; top: 32px; bottom: 0; }
+#adminmenuwrap { float: none; position: absolute; top: 32px; bottom: 0; }
 #adminmenu     { height: 100%; }
 #collapse-menu { position: absolute; bottom: 0; white-space: nowrap; }
