--- a/web/app/themes/umunandi/src/components/price-box/price-box.less
+++ b/web/app/themes/umunandi/src/components/price-box/price-box.less
@@ -1,5 +1,6 @@
 @price-box-gradient-bot: saturate(@buff, 8%);
 @price-box-gradient-top: saturate(darken(@buff, 2%), 10%);
+
 .price-box {
   position: relative;
   display: flex;
@@ -113,7 +114,6 @@
 }
 
 @media @mq-upto-xs {
-  .price-box-body              { padding: 0 0.3rem; }
   .price-box-header .round-img { width: 6rem; }
   .price-box-header  h3        { font-size: 6.6vw; }
   .price-box-price             { font-size: 3.5vw; }
