--- a/web/app/themes/umunandi/src/pages/home/less/header.less
+++ b/web/app/themes/umunandi/src/pages/home/less/header.less
@@ -11,7 +11,7 @@
   }
   
   .tagline {
-    top: 24%;
+    top: 26%;
     margin-top: 5px;
     @media @mq-md { margin-top: 20px; }
     text-align: left;
@@ -50,7 +50,7 @@
 
   &               { background-position: 100% 66%; }
   @media @mq-tall { background-position-x: ~"calc(50% - 45vh)"; } // Keeps kid centred
-  @media @mq-sm   { background-position-x: 83%; }
+  @media @mq-sm   { background-position-x: 83%; height: 87vh; }
   @media @mq-lg   { background-position-x: 100%; }
   
   // Gradient approximation of home page image
